--- a/src/features/users/components/UserCard.css
+++ b/src/features/users/components/UserCard.css
@@ -9,9 +9,12 @@
 
 .user-card__header {
   display: flex;
-  gap: 12px;
+  flex-direction: column;
   align-items: center;
+  gap: 8px;
+  text-align: center;
 }
+
 
 .user-card__avatar {
   width: 48px;
@@ -22,10 +25,6 @@
   align-items: center;
   justify-content: center;
   font-weight: 600;
-}
-
-.user-card__info {
-  flex: 1;
 }
 
 .user-card__name {
@@ -60,5 +59,6 @@
   border-radius: 10px;
   padding: 10px;
   font-weight: 600;
+   background-color: #4caf50;
   cursor: pointer;
 }
