--- a/src/features/users/components/UsersList.css
+++ b/src/features/users/components/UsersList.css
@@ -10,6 +10,7 @@
   display: grid;
   grid-template-columns: 44px 280px 220px 200px 200px 140px 140px;
   align-items: center;
+   justify-items: start; 
 }
 
 .users-list__header {
@@ -18,6 +19,7 @@
   background: #fafafa;
   border-bottom: 1px solid #e6e6e6;
   padding: 10px 12px;
+  justify-items: start;
 }
 
 .users-list__row {
